# Convert

./: .gitignore  .gitignore.backup  .pre-commit-config.yaml  =5.9.0  COMMERCIAL.md  CONTEXT.md  LICENSE  MDS_v3.1.md  MDS_v3.14.md  PROJECT_SOP_v1.0.md  README.md  ROADMAP.md  deploy_crypto_trinity_rev2.py  iron_cleanup.py  mds-core.spec  pack_and_commit.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_user.bat  setup_sop.py  setup_sprint4.py  setup_wheel.py  update_docs_content.py  walkthrough.md
.agent/rules/: project-convert-pksf.md
.project-context/: ACTIVE_MISSION.md  PROJECT_PROMPT.md
.project-context/ARCHIVE/: MISSION-20251227-DONE-watchdog-core-v2.md  MISSION-20251227-DONE-watchdog-core.md
docs/: OPEN_SOURCE_PROTOCOL.md  README.md
docs/00_GOVERNANCE/: DOC_GOVERNANCE_RULES.md
docs/01_ARCHITECTURE/: ADR-003-BACKUP-CRYPTO.md  ADR-004-SPRINT4-COMPLETION.md  ARCHITECTURE_DECISIONS.md  MDS_v3.14.md  MDS_v3.14_Pi.md  README.md
docs/01_stories/: US-UI-DASH-01.yaml
docs/03_SPECS/: SPEC_TASK_6_1_EVENT_CONTRACT.md  SPEC_TASK_6_2_EVENTBUS.md  SPEC_TASK_6_3_INDEXER_QUEUE.md  SPEC_TASK_6_4_EXTRACTION.md  SPEC_TASK_6_5_INTEGRATION.md  SPEC_TASK_7_1_SEARCH_UI.md
docs/04_KNOWLEDGE/: DATA_DICTIONARY.md  DEBUG_WISDOM.md  ETERNAL_RULES.md  GIT_WORKFLOW.md  INDEX.md  LEGACY_LESSONS.md  LESSONS.md  LESSONS_SPRINT_6.md  README.md  TASK_6_5_CROSS_REFERENCE.md  forensic_hygiene.md  libsodium_api_patterns.md  windows_file_locking.md
docs/05_OPERATIONS/: DECISION_POLICY.md  ENGINEERING_PLAYBOOK.md  PLAYBOOK.md  README.md  SECURITY_POLICY.md
docs/BUILD_GUIDES/: README.md  SQLCIPHER_BUILD_MANIFESTO.md  SQLCIPHER_LESSONS_LEARNED.md  SQLCIPHER_PACKAGING_GUIDE.md  SQLCIPHER_QUICKSTART.md
docs/api/openapi/: .gitignore  README.md  events.api.yaml  pyproject.toml
docs/decisions/: ADR-002-CRYPTO-LIB.md
docs/planning/: SPRINT_5_PLAN.md
docs/policies/: DECISION_POLICY.md  ENGINEERING_PLAYBOOK.md  GIT_WORKFLOW.md  (+1 more)
scripts/: clean_root.py  cleanup_debt.py  complete_task_5_3.py  deploy_crypto_system.py  deploy_frontend.py  deploy_protocol_compliance.py  deploy_ui_final.py  fix_deps.py  init_watchdog_tdd.py  kill_ghost.py  restore_ui_native.py  setup_firewall.py  smoke_test.py  update_docs_content.py  update_mds_final.py  verify_sqlite_version.py
sprint-2/: README.md  pyproject.toml  requirements.txt
sprint-2/scripts/: run_dev.py
sprint-2/src/core/: __init__.py  config.py  main.py
sprint-2/src/core/crypto/: __init__.py  service.py
sprint-2/src/core/schemas/: __init__.py  events.py
sprint-2/src/core/services/: __init__.py  dashboard.py
sprint-2/src/core/storage/: __init__.py  adapter.py  database.py
sprint-2/src/data/: mds_eternal.db
sprint-2/tests/: test_mds_integration.py
src-tauri/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.js
src-tauri/capabilities/: default.json
src-tauri/src/: App.svelte  lib.rs  main.rs  python_bridge.rs
src-tauri/src/commands/: backup.rs  dispatch.rs  mod.rs  recovery.rs  recovery_export.rs  restore.rs
src-tauri/src/tests/: bridge_test.rs  mod.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.js
src/core/indexer/extractors/docx_rs/: Cargo.toml  pyproject.toml
src/core/indexer/extractors/docx_rs/src/: lib.rs
tests/: conftest.py  test_backup_bridge.py  test_dispatcher.py  test_kms_core.py  test_memory_safe.py  test_trinity_rev2.py
tools/: audit_density.py  cleanup.py  final_iron_wall.py  fix_gitignore.py  git_health_check.py  nuclear_purge.py  surgical_cleanup.py  ultra_ignore.py
(+133 files in other folders)
