[project]
name = "project-convert"
version = "3.1.0"
description = "MDS v3.1-ETERNAL - Cognitive Storage System"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.20.0",
    "orjson>=3.9.10",
]
[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "black>=23.0.0"]