[package]
name = "convert-app"
version = "0.1.0"
description = "The Iron Vault"
authors = ["Admin"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip39 = { version = "2.0", features = ["rand"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
qrcode = "0.12"
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png"] }