[package]
name = "convert-vault"
version = "0.1.0"
description = "Omega Vault"
authors = ["Convert Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-dialog = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# RULE: Explicit version pinning to avoid Trait Bound Errors
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = "0.24.9"
base64 = "0.22"
tauri-plugin-fs = "2.4.4"
# PyO3 for embedded Python (MDS v3.14 Omega Fix)
# RULE #25: Using abi3-py312 to support Python 3.14+ without downgrade
pyo3 = { version = "0.22", features = ["auto-initialize", "abi3-py312"] }
once_cell = "1.19"
